--- a/promptWrite.html
+++ b/promptWrite.html
@@ -1,52 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title>Story Press</title>
 
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-
-    <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-
-    <!-- Latest compiled JavaScript -->
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
-    <!-- AngularJS -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
-
-    <!-- JS -->
-    <script src="promptWrite.js"></script>
-
-    <!-- STYLE -->
-    <link rel="stylesheet" type="text/css" href="promptWrite.css">
-</head>
-<body ng-app="promptWriteApp">
-<header>
-    <div id="title">
-        <!--temp title or maybe not-->
-        <h1>Story Press</h1>
-        <!--come up with better tag line-->
-        <span>Come up with a prompt, or write a story based on one!</span>
-    </div>
-</header>
-<div class="main-container">
-    <nav class="sidebar">
-        <div>
-            <span>fontawesome icon here</span>
-            <span>username</span>
-        </div>
-        <ul>
-            <li>Browse Stories/Prompts</li>
-            <li>My Stories</li>
-            <li>My Prompts</li>
-            <li>Account Settings</li>
-        </ul>
-    </nav>
-
-    <div class="main-body" ng-controller="promptWriteController as pwc" ng-init="pwc.status = 'Submit Prompt';">
-        <form>
+    <div class="main-body">
+        <h1>Controller: {{ pwc }}</h1>
+        <form ng-init="pwc.status = 'Submit Prompt';">
             <div>
                 <p>Genre</p>
                 <input type="text" placeholder="Write your genre here!" ng-model="pwc.genre">
@@ -64,8 +19,3 @@
                 pwc.prompt = ''; pwc.genre = ''; pwc.setting = ''; pwc.status = 'Submitted!';">
         </form>
     </div>
-</div>
-
-<footer>Footer stuff</footer>
-</body>
-</html>
